--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
 
+    <header>
+        <h1>Driguez's Portfolio</h1>
+    </header>
+
+    <section>
+        <h2>Projects</h2>
+        <ul id="projectsList">
+            <!-- Project items will be dynamically added here -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Programming Languages and Technologies</h2>
+        <ul id="techList">
+            <!-- Technologies will be dynamically added here -->
+        </ul>
+    </section>
 
     <script src="./assets/main.js"></script>
 
