--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <section>
         <h2>Projects</h2>
-        <ul id="projectsList">
+        <ul id="projects-list">
             <!-- Project items will be dynamically added here -->
         </ul>
     </section>
 
     <section>
         <h2>Programming Languages and Technologies</h2>
-        <ul id="techList">
+        <ul id="tech-list">
             <!-- Technologies will be dynamically added here -->
         </ul>
     </section>
